--- a/movies/templates/index.html
+++ b/movies/templates/index.html
@@ -4,7 +4,7 @@
         <title>Página de Ejemplo</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/tailwind-style.css" rel="stylesheet">
+        <link href="/output.css" rel="stylesheet">
     </head>
     <body class="font-sans max-w-4xl mx-auto">
     <header class="h-12 w-full text-center mx-auto mt-5 border-b-2 border-sky-500">
