Script Ready To Create Movies

--- a/movies/templates/Actors.html
+++ b/movies/templates/Actors.html
@@ -18,7 +18,7 @@
             <h2 style="font-weight: 500;" class="text-white text-4xl p-6">{{person.name}}</h2>
             <div class="text-gray-200 p-6 flex flex-col max-w-7xl mx-auto">
                 <h3 class="font-bold text-lg ">Biografía</h3>
-                <p>Alberto Catesta fue un escritor y periodista colombiano. Reconocido principalmente por sus novelas y cuentos, también escribió narrativa de no ficción, discursos, reportajes, críticas cinematográficas y memorias.</p>
+                <p>{{person.biography}}</p>
             </div> 
           </div>
         </section>
